# culture-tracker

./: .coverage  .cursorrules.json  .gitignore  PARAMETER-MANAGEMENT.md  PARAMETER-MIGRATION.md  README.md  app.db  coverage.xml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  server.js
.cursor/rules/: Implementing test.mdc  javascript-typescript-rule.mdc  mycustomrule.mdc  parameter.mdc  structure.mdc
Culture Tracker/: README.md
Culture Tracker/api/app/: calcs.py  deps.py
Culture Tracker/ui/src/: App.tsx
api/: .env  app.db  migration_complete.txt  requirements.txt
api/app/: README.md  calcs.py  crud.py  database.py  deps.py  main.py  migrations.py  models.py  schemas.py
api/app/routers/: __init__.py  calculations.py  cell_states.py  export.py  parameters.py  passages.py
api/app/utils/: __init__.py  add_parameter.py  parameters.py
api/culture_tracker_api.egg-info/: PKG-INFO  SOURCES.txt
api/tests/: conftest.py  test_calcs.py  test_export.py
api/tests/api_tests/: test_cell_states.py
api/tests/unit/: test_crud.py
app/routers/: export.py
src/components/: CreateStateForm 2.tsx  EditStateForm.tsx  StateLineage.tsx
src/types/: form.ts  state.ts
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/playwright-report/: index.html
ui/src/: App.tsx  README.md  api.ts  index.css  main.tsx  types.ts
ui/src/components/: CreateStateForm.tsx  CustomFlow.tsx  DynamicParameters.tsx  EditStateForm.tsx  EditStateModal.tsx  FlowGraph.tsx  GrowthMeasurementForm(DEPRECATED).tsx  (+16 more)
(+19 files in other folders)
