[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "culture-tracker-api"
version = "0.1.0"
description = "The API for the Culture Tracker application."
readme = "README.md"
license = {text = "Proprietary"}

[tool.setuptools.packages.find]
where = ["api"]
exclude = ["tests*"] 